# recipe-generator

./: .env.example  README.md  README_NEW.md  index.html  vercel.json
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  create_db.py  dev.ps1  docker-compose.yml  init.sql  pyproject.toml  requirements.txt  run.py
backend/app/: config.py  database.py  main.py
backend/app/models/: recipe.py
backend/app/routers/: recipes.py  recipes_simple.py
backend/app/schemas/: recipe.py
backend/app/services/: recipe_service.py  semantic_search_service.py
backend/migrations/: 001_initial.py
src/: App.tsx  index.css
src/components/: IngredientInput.tsx  Navigation.tsx  RecipeCard.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  toast.tsx  toaster.tsx
src/lib/: recipeAPI.ts
src/pages/: Index.tsx  SavedRecipes.tsx
supabase/: config.toml
supabase/functions/generate-recipes/: index.ts
